# smoobu-mami

./: Cargo.toml  LICENSE  smoobu-mami.spec
src/: main.rs
src/resources/ui/: smoobu-mami.cmb  smoobu-mami.ui
src/ui/: smoobu-mami.cmb  smoobu-mami.ui
