[package]
name = "smoobu-mami"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
serde = { version = "1.0.197", features = ["derive"] }
